Renamed to student_interface

--- a/student_interface.ipynb
+++ b/student_interface.ipynb
@@ -6,11 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Use this cell to define your strategy\n",
     "from assessment import assess\n",
     "\n",
     "def my_strategy(board, player_number):\n",
     "    '''Write your strategy here\n",
-    "    (param) board ([[int]*6]*7): The board the move will be taken on. For each position, will be 0 for unoccupied, 1 for occupied by player 1, 2 for occupied by player 2.\n",
+    "    (param) board ([[int]*6]*7): The board te move will be taken on. For each position, will be 0 for unoccupied, 1 for occupied by player 1, 2 for occupied by player 2.\n",
     "    (param) int player_number The number of your pieces in the board\n",
     "    (return) int the number of the column you want your next move to be in (0 for the leftmost column, 6 for the rightmost)'''\n",
     "    #Write your code here\n"
@@ -22,7 +23,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this code cell to assess your strategy\n",
+    "# When you want to play against your strategy, run the cell above, then this cell\n",
+    "from run_game import run_game\n",
+    "from strategies import manual\n",
+    "\n",
+    "run_game(\"Your Strategy\", \"You\", my_strategy, manual.manual)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# When you're ready to run your strategy run the top cell, then this cell\n",
+    "# You can do this as often as you like as you improve your strategy\n",
     "assess(my_strategy)"
    ]
   }
