--- a/student_interface.ipynb
+++ b/student_interface.ipynb
@@ -2,13 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use this cell to define your strategy\n",
-    "from assessment import assess\n",
-    "\n",
     "def my_strategy(board, player_number):\n",
     "    '''Write your strategy here\n",
     "    (param) board ([[int]*6]*7): The board te move will be taken on. For each position, will be 0 for unoccupied, 1 for occupied by player 1, 2 for occupied by player 2.\n",
@@ -19,12 +17,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You will go first\n",
+      "|               |\n",
+      "|               |\n",
+      "|               |\n",
+      "|               |\n",
+      "|               |\n",
+      "|               |\n",
+      "-----------------\n",
+      "You returned an error when asked for a move, so Your Strategy wins!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, True)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# When you want to play against your strategy, run the cell above, then this cell\n",
-    "from run_game import run_game\n",
+    "from game.run_game import run_game\n",
     "from strategies import manual\n",
     "\n",
     "run_game(\"Your Strategy\", \"You\", my_strategy, manual.manual)"
@@ -32,12 +56,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results\n",
+      "Wins: 0\n",
+      "Draws: 0\n",
+      "Losses: 0\n",
+      "Forfeits: 1000\n",
+      "Mark: 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "# When you're ready to run your strategy run the top cell, then this cell\n",
     "# You can do this as often as you like as you improve your strategy\n",
+    "from assessment.assessor import assess\n",
+    "\n",
     "assess(my_strategy)"
    ]
   }
