--- a/student_interface.ipynb
+++ b/student_interface.ipynb
@@ -9,7 +9,7 @@
     "# Use this cell to define your strategy\n",
     "def my_strategy(board, player_number):\n",
     "    '''Write your strategy here\n",
-    "    (param) board ([[int]*6]*7): The board te move will be taken on. For each position, will be 0 for unoccupied, 1 for occupied by player 1, 2 for occupied by player 2.\n",
+    "    (param) board ([[int]*6]*7): The board the move will be taken on. For each position, will be 0 for unoccupied, 1 for occupied by player 1, 2 for occupied by player 2.\n",
     "    (param) int player_number The number of your pieces in the board\n",
     "    (return) int the number of the column you want your next move to be in (0 for the leftmost column, 6 for the rightmost)'''\n",
     "    #Write your code here\n"
