Updated mark format to percentage

--- a/student_interface.ipynb
+++ b/student_interface.ipynb
@@ -12,7 +12,8 @@
     "    (param) board ([[int]*6]*7): The board the move will be taken on. For each position, will be 0 for unoccupied, 1 for occupied by player 1, 2 for occupied by player 2.\n",
     "    (param) int player_number The number of your pieces in the board\n",
     "    (return) int the number of the column you want your next move to be in (0 for the leftmost column, 6 for the rightmost)'''\n",
-    "    #Write your code here\n"
+    "    #Write your code here\n",
+    "    return(0)\n"
    ]
   },
   {
