Updated manual play arguments

--- a/student_interface.ipynb
+++ b/student_interface.ipynb
@@ -13,7 +13,9 @@
     "    (param) int player_number The number of your pieces in the board\n",
     "    (return) int the number of the column you want your next move to be in (0 for the leftmost column, 6 for the rightmost)'''\n",
     "    #Write your code here\n",
-    "    return(0)\n"
+    "    for i_column in range(7):\n",
+    "        if min(board[i_column]) == 0:\n",
+    "            return i_column\n"
    ]
   },
   {
@@ -26,7 +28,7 @@
     "from game.run_game import run_game\n",
     "from strategies import manual\n",
     "\n",
-    "run_game(\"Your Strategy\", \"You\", my_strategy, manual.manual)"
+    "run_game(\"Your Strategy\", \"You\", my_strategy, manual.manual, move_duration=0.1)"
    ]
   },
   {
@@ -37,10 +39,17 @@
    "source": [
     "# When you're ready to run your strategy run the top cell, then this cell\n",
     "# You can do this as often as you like as you improve your strategy\n",
-    "from assessment.assessor import assess\n",
+    "from assessment.assessor import assess, random_opponent\n",
     "\n",
-    "assess(my_strategy)"
+    "assess(random_opponent)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
