Added cell to play a single match agains topponent

--- a/student_interface.ipynb
+++ b/student_interface.ipynb
@@ -13,9 +13,7 @@
     "    (param) int player_number The number of your pieces in the board\n",
     "    (return) int the number of the column you want your next move to be in (0 for the leftmost column, 6 for the rightmost)'''\n",
     "    #Write your code here\n",
-    "    for i_column in range(7):\n",
-    "        if min(board[i_column]) == 0:\n",
-    "            return i_column\n"
+    "\n"
    ]
   },
   {
@@ -37,11 +35,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run this cell to see your code play a single match against the opponent you will face in the assessment\n",
+    "# Press enter to progress the game\n",
+    "from game.run_game import run_game\n",
+    "from assessment.assessor import random_opponent\n",
+    "\n",
+    "run_game(\"Your Strategy\", \"Opponent\", my_strategy, random_opponent, move_duration=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# When you're ready to run your strategy run the top cell, then this cell\n",
     "# You can do this as often as you like as you improve your strategy\n",
     "from assessment.assessor import assess, random_opponent\n",
     "\n",
-    "assess(random_opponent)"
+    "assess(my_strategy)"
    ]
   }
  ],
