Removed uneccesary import statement

--- a/student_interface.ipynb
+++ b/student_interface.ipynb
@@ -13,6 +13,7 @@
     "    (param) int player_number The number of your pieces in the board\n",
     "    (return) int the number of the column you want your next move to be in (0 for the leftmost column, 6 for the rightmost)'''\n",
     "    #Write your code here\n",
+    "\n",
     "\n"
    ]
   },
@@ -51,7 +52,7 @@
    "source": [
     "# When you're ready to run your strategy run the top cell, then this cell\n",
     "# You can do this as often as you like as you improve your strategy\n",
-    "from assessment.assessor import assess, random_opponent\n",
+    "from assessment.assessor import assess\n",
     "\n",
     "assess(my_strategy)"
    ]
@@ -73,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4,
   "vscode": {
